tests/ui/derives/redundant-derive-note-on-unimplemented.stderr
error[E0277]: `X` doesn't implement `Debug`
  --> $DIR/redundant-derive-note-on-unimplemented.rs:14:22
   |
LL |     println!("{:?}", S(X));
   |               ----   ^^^^ `X` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |               |
   |               required by this formatting parameter
   |
   = help: the trait `Debug` is not implemented for `X`
help: the trait `Debug` is implemented for `S<T>`
  --> $DIR/redundant-derive-note-on-unimplemented.rs:8:10
   |
LL | #[derive(Debug)]
   |          ^^^^^
note: required for `S<X>` to implement `Debug`
  --> $DIR/redundant-derive-note-on-unimplemented.rs:9:8
   |
LL | #[derive(Debug)]
   |          ----- in this derive macro expansion
LL | struct S<T>(T);
   |        ^ - type parameter would need to implement `Debug`
   = help: consider manually implementing `Debug` to avoid undesired bounds
help: consider annotating `X` with `#[derive(Debug)]`
   |
LL + #[derive(Debug)]
LL | struct X;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
